# ACME

./: .gitignore  CLAUDE.md  DATA_ACCURACY_REPORT.md  DATA_SUMMARY_ACCURATE.md  MICROSITE_DATA_INTERPRETATION.md  MICROSITE_STORY_PLAN.md  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  analyze_barriers.py  analyze_barriers_fixed.py  barrier_analysis_results.csv  barrier_heatmap_data.json  comprehensive_survey_analysis.py  comprehensive_survey_analysis_v2.py  create_visualizations.py  geographic_summary.csv  heatmap_data.csv  prepare_heatmap_data.py  survey_analysis.py
analysis/: .env.example  AZURE_OPENAI_MIGRATION.md  PROJECT_STATUS_VERIFICATION.md  README_ANALYSIS.md  REPORT_GAPS_AND_TWEAKS.md  analysis_completion_status.txt  analyze_by_question.py  analyze_cultural_funding_themes.py  analyze_themes_by_program.py  calculate_respondent_percentages.py  check_analysis_progress.py  check_status_once.py  create_funding_themes_visual.py  extract_transportation_comments.py  extract_who_metrics.py  generate_comprehensive_report.py  generate_report_simple.py  generate_report_visuals.py  generate_static_visuals.py  generate_word_report.py  insert_visuals_in_report.py  inspect_data.py  inspect_survey_columns.py  monitor_analysis.py  monitor_live.py  pyproject.toml  recalculate_funding_themes.py  run_analysis.py  run_deep_analysis.py  run_deep_visualizations.py  run_full_analysis.sh  run_visualizations.py  status_dashboard.py  test_azure_openai.py  visualize_theme_percentages.py
analysis/results/: analysis_report.md  funding_themes_by_respondent.json  microsite_data.json  (+3 more)
(+221 files in other folders)
